Se ccorrige bug de reporte asistencia perfecto